Adição de JS para adicionar contatos dinamicamente

--- a/module/Application/view/application/index/add.phtml
+++ b/module/Application/view/application/index/add.phtml
@@ -16,3 +16,6 @@ $form->prepare();
 echo $this->form()->openTag($form);
 echo $this->formCollection($form);
 echo $this->form()->closeTag();
+
+
+echo $this->headScript()->prependFile('/js/crud.js');
